train vgg19 with GAP

--- a/model_merge.ipynb
+++ b/model_merge.ipynb
@@ -109,42 +109,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "input_1_GAP_16\n",
+      "block1_conv1_GAP_16\n",
+      "block1_conv2_GAP_16\n",
+      "block1_pool_GAP_16\n",
+      "block2_conv1_GAP_16\n",
+      "block2_conv2_GAP_16\n",
+      "block2_pool_GAP_16\n",
+      "block3_conv1_GAP_16\n",
+      "block3_conv2_GAP_16\n",
+      "block3_conv3_GAP_16\n",
+      "block3_pool_GAP_16\n",
+      "block4_conv1_GAP_16\n",
+      "block4_conv2_GAP_16\n",
+      "block4_conv3_GAP_16\n",
+      "block4_pool_GAP_16\n",
+      "block5_conv1_GAP_16\n",
+      "block5_conv2_GAP_16\n",
+      "block5_conv3_GAP_16\n",
+      "block5_pool_GAP_16\n",
+      "global_average_pooling2d_1_GAP_16\n",
+      "dense_1_GAP_16\n",
+      "input_1_GAP_19\n",
+      "block1_conv1_GAP_19\n",
+      "block1_conv2_GAP_19\n",
+      "block1_pool_GAP_19\n",
+      "block2_conv1_GAP_19\n",
+      "block2_conv2_GAP_19\n",
+      "block2_pool_GAP_19\n",
+      "block3_conv1_GAP_19\n",
+      "block3_conv2_GAP_19\n",
+      "block3_conv3_GAP_19\n",
+      "block3_conv4_GAP_19\n",
+      "block3_pool_GAP_19\n",
+      "block4_conv1_GAP_19\n",
+      "block4_conv2_GAP_19\n",
+      "block4_conv3_GAP_19\n",
+      "block4_conv4_GAP_19\n",
+      "block4_pool_GAP_19\n",
+      "block5_conv1_GAP_19\n",
+      "block5_conv2_GAP_19\n",
+      "block5_conv3_GAP_19\n",
+      "block5_conv4_GAP_19\n",
+      "block5_pool_GAP_19\n",
+      "global_average_pooling2d_1_GAP_19\n",
+      "dense_1_GAP_19\n",
+      "input_1_FC_16\n",
+      "block1_conv1_FC_16\n",
+      "block1_conv2_FC_16\n",
+      "block1_pool_FC_16\n",
+      "block2_conv1_FC_16\n",
+      "block2_conv2_FC_16\n",
+      "block2_pool_FC_16\n",
+      "block3_conv1_FC_16\n",
+      "block3_conv2_FC_16\n",
+      "block3_conv3_FC_16\n",
+      "block3_pool_FC_16\n",
+      "block4_conv1_FC_16\n",
+      "block4_conv2_FC_16\n",
+      "block4_conv3_FC_16\n",
+      "block4_pool_FC_16\n",
+      "block5_conv1_FC_16\n",
+      "block5_conv2_FC_16\n",
+      "block5_conv3_FC_16\n",
+      "block5_pool_FC_16\n",
+      "flatten_1_FC_16\n",
+      "dense_1_FC_16\n",
+      "batch_normalization_1_FC_16\n",
+      "dropout_1_FC_16\n",
+      "dense_2_FC_16\n",
+      "batch_normalization_2_FC_16\n",
+      "dropout_2_FC_16\n",
+      "dense_3_FC_16\n",
+      "input_1_FC_19\n",
+      "block1_conv1_FC_19\n",
+      "block1_conv2_FC_19\n",
+      "block1_pool_FC_19\n",
+      "block2_conv1_FC_19\n",
+      "block2_conv2_FC_19\n",
+      "block2_pool_FC_19\n",
+      "block3_conv1_FC_19\n",
+      "block3_conv2_FC_19\n",
+      "block3_conv3_FC_19\n",
+      "block3_conv4_FC_19\n",
+      "block3_pool_FC_19\n",
+      "block4_conv1_FC_19\n",
+      "block4_conv2_FC_19\n",
+      "block4_conv3_FC_19\n",
+      "block4_conv4_FC_19\n",
+      "block4_pool_FC_19\n",
+      "block5_conv1_FC_19\n",
+      "block5_conv2_FC_19\n",
+      "block5_conv3_FC_19\n",
+      "block5_conv4_FC_19\n",
+      "block5_pool_FC_19\n",
+      "flatten_1_FC_19\n",
+      "dense_1_FC_19\n",
+      "batch_normalization_1_FC_19\n",
+      "dropout_1_FC_19\n",
+      "dense_2_FC_19\n",
+      "batch_normalization_2_FC_19\n",
+      "dropout_2_FC_19\n",
+      "dense_3_FC_19\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_2 (InputLayer)            (None, 224, 224, 3)  0                                            \n",
+      "input_1 (InputLayer)            (None, 224, 224, 3)  0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "vgg16_model (Model)             (None, 10)           21207882    input_2[0][0]                    \n",
+      "vgg16_model_GAP (Model)         (None, 10)           14719818    input_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "vgg19_model (Model)             (None, 10)           26517578    input_2[0][0]                    \n",
+      "vgg19_model_GAP (Model)         (None, 10)           20029514    input_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "average_2 (Average)             (None, 10)           0           vgg16_model[1][0]                \n",
-      "                                                                 vgg19_model[1][0]                \n",
+      "vgg16_model_FC (Model)          (None, 10)           21207882    input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "vgg19_model_FC (Model)          (None, 10)           26517578    input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "average_1 (Average)             (None, 10)           0           vgg16_model_GAP[1][0]            \n",
+      "                                                                 vgg19_model_GAP[1][0]            \n",
+      "                                                                 vgg16_model_FC[1][0]             \n",
+      "                                                                 vgg19_model_FC[1][0]             \n",
       "==================================================================================================\n",
-      "Total params: 47,725,460\n",
-      "Trainable params: 47,723,412\n",
+      "Total params: 82,474,792\n",
+      "Trainable params: 82,472,744\n",
       "Non-trainable params: 2,048\n",
       "__________________________________________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "vgg16_model = load_model('vgg16_final_model.h5')\n",
-    "vgg16_model.name = 'vgg16_model'\n",
+    "vgg16_model_GAP = load_model('vgg16_GAP_final.h5')\n",
+    "vgg16_model_GAP.name = 'vgg16_model_GAP'\n",
     "\n",
-    "vgg19_model = load_model('vgg19_final_model.h5')\n",
-    "vgg19_model.name = 'vgg19_model'\n",
+    "for layer in vgg16_model_GAP.layers:\n",
+    "    layer.name = layer.name + '_GAP_16'\n",
+    "    print(layer.name)\n",
     "\n",
-    "models = [vgg16_model,vgg19_model]\n",
+    "vgg19_model_GAP = load_model('vgg19_GAP_final.h5')\n",
+    "vgg19_model_GAP.name = 'vgg19_model_GAP'\n",
     "\n",
-    "model_input = Input(shape=models[0].input_shape[1:])\n",
+    "for layer in vgg19_model_GAP.layers:\n",
+    "    layer.name = layer.name + '_GAP_19'\n",
+    "    print(layer.name)\n",
+    "\n",
+    "vgg16_model_FC = load_model('vgg16_model_0427_openall.h5')\n",
+    "vgg16_model_FC.name = 'vgg16_model_FC'\n",
+    "for layer in vgg16_model_FC.layers:\n",
+    "    layer.name = layer.name + '_FC_16'\n",
+    "    print(layer.name)\n",
+    "\n",
+    "vgg19_model_FC = load_model('vgg19_final_model.h5')\n",
+    "vgg19_model_FC.name = 'vgg19_model_FC'\n",
+    "for layer in vgg19_model_FC.layers:\n",
+    "    layer.name = layer.name + '_FC_19'\n",
+    "    print(layer.name)\n",
+    "\n",
+    "# models = [vgg16_model_GAP,vgg19_model_GAP]\n",
+    "models = [vgg16_model_GAP,vgg19_model_GAP,vgg16_model_FC,vgg19_model_FC]\n",
+    "\n",
+    "model_input = Input(shape=(224,224,3))\n",
     "\n",
     "ensemble_model = ensemble_models(models,model_input)\n",
     "\n",
@@ -153,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_model(ensemble_model,test_path=test_path,csv='vgg16_and_vgg19_submission_0430.csv')"
+    "test_model(ensemble_model,test_path=test_path,csv='vgg16_and_vgg19_all_submission_0506.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,134 +317,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_features(model):\n",
-    "    image_datagen = image.ImageDataGenerator(preprocessing_function=preprocess_input)\n",
+    "# def get_features(model):\n",
+    "#     image_datagen = image.ImageDataGenerator(preprocessing_function=preprocess_input)\n",
     "\n",
-    "    train_generator = image_datagen.flow_from_directory(\n",
-    "                                        train_path,\n",
-    "                                        target_size=image_size,\n",
-    "                                        batch_size=batch_size,\n",
-    "                                        class_mode='categorical',\n",
-    "                                        shuffle=False)\n",
+    "#     train_generator = image_datagen.flow_from_directory(\n",
+    "#                                         train_path,\n",
+    "#                                         target_size=image_size,\n",
+    "#                                         batch_size=batch_size,\n",
+    "#                                         class_mode='categorical',\n",
+    "#                                         shuffle=False)\n",
     "\n",
-    "    validation_generator = image_datagen.flow_from_directory(\n",
-    "                                        validation_path,\n",
-    "                                        target_size=image_size,\n",
-    "                                        batch_size=batch_size,                                    \n",
-    "                                        class_mode='categorical',\n",
-    "                                        shuffle=False)\n",
+    "#     validation_generator = image_datagen.flow_from_directory(\n",
+    "#                                         validation_path,\n",
+    "#                                         target_size=image_size,\n",
+    "#                                         batch_size=batch_size,                                    \n",
+    "#                                         class_mode='categorical',\n",
+    "#                                         shuffle=False)\n",
     "    \n",
-    "    train_data = model.predict_generator(train_generator,nb_train_samples)\n",
-    "    train_label = train_generator.classes\n",
+    "#     train_data = model.predict_generator(train_generator,nb_train_samples)\n",
+    "#     train_label = train_generator.classes\n",
     "    \n",
-    "    validation_data = model.predict_generator(validation_generator,nb_val_samples)\n",
-    "    validation_label = validation_generator.classes\n",
+    "#     validation_data = model.predict_generator(validation_generator,nb_val_samples)\n",
+    "#     validation_label = validation_generator.classes\n",
     "    \n",
-    "    return train_data,train_label,validation_data,validation_label"
+    "#     return train_data,train_label,validation_data,validation_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 20000 images belonging to 10 classes.\n",
-      "Found 2424 images belonging to 10 classes.\n",
-      "Found 20000 images belonging to 10 classes.\n",
-      "Found 2424 images belonging to 10 classes.\n"
-     ]
-    },
-    {
-     "ename": "AxisError",
-     "evalue": "axis 1 is out of bounds for array of dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-4eadaeeb0457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mtrain_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mtrain_label\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mvalidation_label\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalidation_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vgg16_model = load_model('vgg16_final_model.h5')\n",
-    "vgg16_model.name = 'vgg16_model'\n",
+    "# vgg16_model = load_model('vgg16_final_model.h5')\n",
+    "# vgg16_model.name = 'vgg16_model'\n",
     "\n",
-    "vgg19_model = load_model('vgg19_final_model.h5')\n",
-    "vgg19_model.name = 'vgg19_model'\n",
+    "# vgg19_model = load_model('vgg19_final_model.h5')\n",
+    "# vgg19_model.name = 'vgg19_model'\n",
     "\n",
-    "train_data = []\n",
-    "train_label = []\n",
-    "validation_data = []\n",
-    "validation_label = []\n",
+    "# train_data = []\n",
+    "# train_label = []\n",
+    "# validation_data = []\n",
+    "# validation_label = []\n",
     "\n",
-    "for model in [vgg16_model,vgg19_model]:\n",
-    "    td,tl,vd,vl = get_features(model)\n",
-    "    train_data.append(td)\n",
-    "    train_label.append(tl)\n",
-    "    validation_data.append(vd)\n",
-    "    validation_label.append(vl)\n",
+    "# for model in [vgg16_model,vgg19_model]:\n",
+    "#     td,tl,vd,vl = get_features(model)\n",
+    "#     train_data.append(td)\n",
+    "#     train_label.append(tl)\n",
+    "#     validation_data.append(vd)\n",
+    "#     validation_label.append(vl)\n",
     "    \n",
-    "train_data = np.concatenate(train_data, axis=1)\n",
-    "train_label = np.concatenate(train_label, axis=1)\n",
-    "validation_data = np.concatenate(validation_data, axis=1)\n",
-    "validation_label = np.concatenate(validation_label, axis=1)\n",
+    "# train_data = np.concatenate(train_data, axis=1)\n",
+    "# train_label = np.concatenate(train_label, axis=1)\n",
+    "# validation_data = np.concatenate(validation_data, axis=1)\n",
+    "# validation_label = np.concatenate(validation_label, axis=1)\n",
     "\n",
-    "(train_data,train_label) = shuffle(train_data,train_label)\n",
+    "# (train_data,train_label) = shuffle(train_data,train_label)\n",
     "\n",
-    "model_input = Input(shape=train_data.shape[1:])\n",
-    "x = Dropout(0.5)(model_input)\n",
-    "x = Dense(10, activation='softmax')(x)\n",
-    "merge_model = Model(inputs=model_input,outputs=x)\n",
+    "# model_input = Input(shape=train_data.shape[1:])\n",
+    "# x = Dropout(0.5)(model_input)\n",
+    "# x = Dense(10, activation='softmax')(x)\n",
+    "# merge_model = Model(inputs=model_input,outputs=x)\n",
     "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "model.fit(train_data,train_label,batch_size=batch_size,epochs=10,\n",
-    "          validation_data=(validation_data,validation_label),\n",
-    "          shuffle=True)"
+    "# model.compile(optimizer='adam',\n",
+    "#               loss='categorical_crossentropy',\n",
+    "#               metrics=['accuracy'])\n",
+    "# model.fit(train_data,train_label,batch_size=batch_size,epochs=10,\n",
+    "#           validation_data=(validation_data,validation_label),\n",
+    "#           shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(train_data.shape)\n",
+    "# print(validation_data.size())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2547808, 20)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'size'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-bee2193f11e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'size'"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_data.shape)\n",
-    "print(validation_data.size())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
