--- a/vgg16.ipynb
+++ b/vgg16.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,11 +145,11 @@
     "x = vgg16_base_model.output\n",
     "\n",
     "x = Flatten()(x)\n",
-    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dense(128, activation='relu')(x)\n",
     "x = BatchNormalization()(x)\n",
     "x = Dropout(0.5)(x)\n",
     "\n",
-    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dense(128, activation='relu')(x)\n",
     "x = BatchNormalization()(x)\n",
     "x = Dropout(0.5)(x)\n",
     "predict = Dense(10, activation='softmax')(x)\n",
@@ -159,21 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 input_1 False\n",
+      "0 input_2 False\n",
       "1 block1_conv1 False\n",
       "2 block1_conv2 False\n",
       "3 block1_pool False\n",
@@ -192,14 +185,14 @@
       "16 block5_conv2 False\n",
       "17 block5_conv3 False\n",
       "18 block5_pool False\n",
-      "19 flatten_1 True\n",
-      "20 dense_1 True\n",
-      "21 batch_normalization_1 True\n",
-      "22 dropout_1 True\n",
-      "23 dense_2 True\n",
-      "24 batch_normalization_2 True\n",
-      "25 dropout_2 True\n",
-      "26 dense_3 True\n"
+      "19 flatten_2 True\n",
+      "20 dense_4 True\n",
+      "21 batch_normalization_3 True\n",
+      "22 dropout_3 True\n",
+      "23 dense_5 True\n",
+      "24 batch_normalization_4 True\n",
+      "25 dropout_4 True\n",
+      "26 dense_6 True\n"
      ]
     }
    ],
@@ -213,14 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -228,23 +214,23 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "156/156 [==============================] - 322s 2s/step - loss: 1.9653 - acc: 0.3853 - val_loss: 1.3089 - val_acc: 0.6102\n",
+      "156/156 [==============================] - 330s 2s/step - loss: 2.2529 - acc: 0.3022 - val_loss: 1.3992 - val_acc: 0.4670\n",
       "Epoch 2/15\n",
-      "156/156 [==============================] - 325s 2s/step - loss: 0.8922 - acc: 0.6984 - val_loss: 1.0660 - val_acc: 0.6742\n",
+      "156/156 [==============================] - 326s 2s/step - loss: 1.1133 - acc: 0.6101 - val_loss: 1.0798 - val_acc: 0.6355\n",
       "Epoch 3/15\n",
-      "156/156 [==============================] - 323s 2s/step - loss: 0.6313 - acc: 0.7896 - val_loss: 1.5527 - val_acc: 0.5932\n",
+      "156/156 [==============================] - 323s 2s/step - loss: 0.7546 - acc: 0.7477 - val_loss: 0.9663 - val_acc: 0.6747\n",
       "Epoch 4/15\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.5114 - acc: 0.8282 - val_loss: 1.6170 - val_acc: 0.5967\n",
+      "156/156 [==============================] - 322s 2s/step - loss: 0.6134 - acc: 0.7941 - val_loss: 1.2106 - val_acc: 0.6429\n",
       "Epoch 5/15\n",
-      "156/156 [==============================] - 318s 2s/step - loss: 0.4352 - acc: 0.8572 - val_loss: 1.4819 - val_acc: 0.5980\n"
+      "156/156 [==============================] - 321s 2s/step - loss: 0.5354 - acc: 0.8229 - val_loss: 1.0181 - val_acc: 0.6794\n",
+      "Epoch 6/15\n",
+      "156/156 [==============================] - 317s 2s/step - loss: 0.4713 - acc: 0.8402 - val_loss: 0.9991 - val_acc: 0.6764\n"
      ]
     }
    ],
    "source": [
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
-    "                    #optimizer=optimizers.SGD(lr=1e-3, momentum=0.9) #,decay=1e-6,nesterov=True),\n",
     "                    optimizer=optimizers.Adam(lr=1e-3),\n",
-    "#                     optimizer=Adadelta(),\n",
     "                    metrics=['accuracy'])\n",
     "\n",
     "# fine-tune the model\n",
@@ -261,14 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,15 +255,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "156/156 [==============================] - 325s 2s/step - loss: 0.5677 - acc: 0.8278 - val_loss: 1.1804 - val_acc: 0.7626\n",
+      "156/156 [==============================] - 324s 2s/step - loss: 0.4192 - acc: 0.8705 - val_loss: 0.6258 - val_acc: 0.8190\n",
       "Epoch 2/20\n",
-      "156/156 [==============================] - 325s 2s/step - loss: 0.1453 - acc: 0.9557 - val_loss: 0.5371 - val_acc: 0.8724\n",
+      "156/156 [==============================] - 328s 2s/step - loss: 0.1379 - acc: 0.9596 - val_loss: 0.8048 - val_acc: 0.8193\n",
       "Epoch 3/20\n",
-      "156/156 [==============================] - 322s 2s/step - loss: 0.0846 - acc: 0.9756 - val_loss: 0.8030 - val_acc: 0.8219\n",
+      "156/156 [==============================] - 324s 2s/step - loss: 0.0893 - acc: 0.9755 - val_loss: 0.5617 - val_acc: 0.8524\n",
       "Epoch 4/20\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0728 - acc: 0.9776 - val_loss: 0.9664 - val_acc: 0.7474\n",
+      "156/156 [==============================] - 321s 2s/step - loss: 0.0758 - acc: 0.9802 - val_loss: 0.5994 - val_acc: 0.8306\n",
       "Epoch 5/20\n",
-      "156/156 [==============================] - 322s 2s/step - loss: 0.0559 - acc: 0.9828 - val_loss: 1.0667 - val_acc: 0.7770\n"
+      "156/156 [==============================] - 320s 2s/step - loss: 0.0610 - acc: 0.9841 - val_loss: 0.5006 - val_acc: 0.8929\n",
+      "Epoch 6/20\n",
+      "156/156 [==============================] - 318s 2s/step - loss: 0.0422 - acc: 0.9882 - val_loss: 0.7838 - val_acc: 0.8079\n",
+      "Epoch 7/20\n",
+      "156/156 [==============================] - 318s 2s/step - loss: 0.0388 - acc: 0.9904 - val_loss: 0.8521 - val_acc: 0.8014\n",
+      "Epoch 8/20\n",
+      "156/156 [==============================] - 317s 2s/step - loss: 0.0307 - acc: 0.9921 - val_loss: 3.4293 - val_acc: 0.4961\n"
      ]
     }
    ],
@@ -298,8 +283,7 @@
     "    layer.trainable = True\n",
     "    \n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
-    "#                     optimizer=optimizers.SGD(lr=1e-3, momentum=0.9),\n",
-    "                    optimizer=optimizers.Adam(lr=1e-3),\n",
+    "                    optimizer=optimizers.Adam(lr=5e-4),\n",
     "                    metrics=['accuracy'])  \n",
     "\n",
     "vgg16_model.fit_generator(\n",
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -325,15 +309,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "156/156 [==============================] - 323s 2s/step - loss: 0.0682 - acc: 0.9789 - val_loss: 1.0124 - val_acc: 0.7300\n",
+      "156/156 [==============================] - 322s 2s/step - loss: 0.0552 - acc: 0.9832 - val_loss: 0.6105 - val_acc: 0.8594\n",
       "Epoch 2/20\n",
-      "156/156 [==============================] - 327s 2s/step - loss: 0.0481 - acc: 0.9850 - val_loss: 0.4275 - val_acc: 0.8855\n",
+      "156/156 [==============================] - 326s 2s/step - loss: 0.0390 - acc: 0.9888 - val_loss: 0.4559 - val_acc: 0.9116\n",
       "Epoch 3/20\n",
-      "156/156 [==============================] - 324s 2s/step - loss: 0.0264 - acc: 0.9920 - val_loss: 0.4779 - val_acc: 0.8449\n",
+      "156/156 [==============================] - 325s 2s/step - loss: 0.0243 - acc: 0.9935 - val_loss: 0.5180 - val_acc: 0.8733\n",
       "Epoch 4/20\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0230 - acc: 0.9940 - val_loss: 0.5554 - val_acc: 0.8463\n",
-      "Epoch 5/20\n",
-      "156/156 [==============================] - 318s 2s/step - loss: 0.0212 - acc: 0.9934 - val_loss: 1.3124 - val_acc: 0.6572\n"
+      "156/156 [==============================] - 322s 2s/step - loss: 0.0240 - acc: 0.9933 - val_loss: 1.1330 - val_acc: 0.7099\n"
      ]
     }
    ],
@@ -359,14 +341,14 @@
     "                        validation_steps=nb_val_samples // batch_size,\n",
     "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
     "                                   CSVLogger('vgg16_fine_tune'),\n",
-    "                                   EarlyStopping(patience=3)])\n",
+    "                                   EarlyStopping(patience=2)])\n",
     "\n",
     "vgg16_model.save('vgg16_model_11.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -374,19 +356,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0204 - acc: 0.9936 - val_loss: 0.6218 - val_acc: 0.8307\n",
+      "156/156 [==============================] - 323s 2s/step - loss: 0.0216 - acc: 0.9940 - val_loss: 0.4645 - val_acc: 0.8906\n",
       "Epoch 2/20\n",
-      "156/156 [==============================] - 326s 2s/step - loss: 0.0144 - acc: 0.9961 - val_loss: 0.6674 - val_acc: 0.8367\n",
+      "156/156 [==============================] - 327s 2s/step - loss: 0.0190 - acc: 0.9951 - val_loss: 1.9985 - val_acc: 0.5627\n",
       "Epoch 3/20\n",
-      "156/156 [==============================] - 323s 2s/step - loss: 0.0139 - acc: 0.9964 - val_loss: 0.9728 - val_acc: 0.7644\n",
+      "156/156 [==============================] - 326s 2s/step - loss: 0.0144 - acc: 0.9963 - val_loss: 0.5850 - val_acc: 0.8645\n",
       "Epoch 4/20\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0154 - acc: 0.9958 - val_loss: 0.3777 - val_acc: 0.8850\n",
-      "Epoch 5/20\n",
-      "156/156 [==============================] - 319s 2s/step - loss: 0.0101 - acc: 0.9971 - val_loss: 0.5748 - val_acc: 0.8393\n",
-      "Epoch 6/20\n",
-      "156/156 [==============================] - 317s 2s/step - loss: 0.0112 - acc: 0.9967 - val_loss: 1.0363 - val_acc: 0.7204\n",
-      "Epoch 7/20\n",
-      "156/156 [==============================] - 317s 2s/step - loss: 0.0121 - acc: 0.9960 - val_loss: 0.7628 - val_acc: 0.8127\n"
+      "156/156 [==============================] - 323s 2s/step - loss: 0.0129 - acc: 0.9966 - val_loss: 0.6935 - val_acc: 0.8528\n"
      ]
     }
    ],
@@ -418,14 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -433,13 +402,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0128 - acc: 0.9959 - val_loss: 0.3994 - val_acc: 0.8997\n",
+      "156/156 [==============================] - 323s 2s/step - loss: 0.0058 - acc: 0.9988 - val_loss: 0.3170 - val_acc: 0.9258\n",
       "Epoch 2/15\n",
-      "156/156 [==============================] - 326s 2s/step - loss: 0.0125 - acc: 0.9965 - val_loss: 0.4805 - val_acc: 0.8924\n",
+      "156/156 [==============================] - 328s 2s/step - loss: 0.0046 - acc: 0.9990 - val_loss: 0.4538 - val_acc: 0.8802\n",
       "Epoch 3/15\n",
-      "156/156 [==============================] - 323s 2s/step - loss: 0.0111 - acc: 0.9962 - val_loss: 1.4662 - val_acc: 0.6646\n",
+      "156/156 [==============================] - 326s 2s/step - loss: 0.0041 - acc: 0.9992 - val_loss: 0.5444 - val_acc: 0.8759\n",
       "Epoch 4/15\n",
-      "156/156 [==============================] - 321s 2s/step - loss: 0.0084 - acc: 0.9981 - val_loss: 0.5677 - val_acc: 0.8637\n"
+      "156/156 [==============================] - 324s 2s/step - loss: 0.0041 - acc: 0.9991 - val_loss: 0.4317 - val_acc: 0.8994\n"
      ]
     }
    ],
@@ -454,7 +423,7 @@
     "\n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
     "#                     optimizer=optimizers.SGD(lr=1e-5, momentum=0.9),\n",
-    "                    optimizer=optimizers.Adam(lr=5e-5),\n",
+    "                    optimizer=optimizers.Adam(lr=1e-5),\n",
     "                    metrics=['accuracy'])  \n",
     "\n",
     "vgg16_model.fit_generator(\n",
@@ -472,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,26 +449,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "156/156 [==============================] - 322s 2s/step - loss: 0.0028 - acc: 0.9995 - val_loss: 0.3332 - val_acc: 0.9240\n",
+      "156/156 [==============================] - 324s 2s/step - loss: 0.0028 - acc: 0.9997 - val_loss: 0.3014 - val_acc: 0.9280\n",
       "Epoch 2/15\n",
-      "156/156 [==============================] - 326s 2s/step - loss: 0.0024 - acc: 0.9995 - val_loss: 0.4448 - val_acc: 0.9016\n",
+      "156/156 [==============================] - 328s 2s/step - loss: 0.0025 - acc: 0.9996 - val_loss: 0.3899 - val_acc: 0.9046\n",
       "Epoch 3/15\n",
-      "156/156 [==============================] - 324s 2s/step - loss: 0.0028 - acc: 0.9994 - val_loss: 0.5931 - val_acc: 0.8593\n",
+      "156/156 [==============================] - 326s 2s/step - loss: 0.0023 - acc: 0.9997 - val_loss: 0.3617 - val_acc: 0.9120\n",
       "Epoch 4/15\n",
-      "156/156 [==============================] - 322s 2s/step - loss: 0.0015 - acc: 0.9998 - val_loss: 0.4288 - val_acc: 0.8859\n",
-      "Epoch 5/15\n",
-      "156/156 [==============================] - 319s 2s/step - loss: 0.0014 - acc: 0.9997 - val_loss: 0.6277 - val_acc: 0.8528\n",
-      "Epoch 6/15\n",
-      "156/156 [==============================] - 319s 2s/step - loss: 0.0017 - acc: 0.9996 - val_loss: 0.4019 - val_acc: 0.8933\n"
+      "156/156 [==============================] - 322s 2s/step - loss: 0.0019 - acc: 0.9997 - val_loss: 0.4821 - val_acc: 0.8837\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f0e8059f630>"
+       "<keras.callbacks.History at 0x7f0ee831f860>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +472,7 @@
    "source": [
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
     "#                     optimizer=optimizers.SGD(lr=1e-5, momentum=0.9),\n",
-    "                    optimizer=optimizers.Adam(lr=1e-5),\n",
+    "                    optimizer=optimizers.Adam(lr=5e-6),\n",
     "                    metrics=['accuracy'])  \n",
     "\n",
     "vgg16_model.fit_generator(\n",
@@ -518,12 +483,12 @@
     "                        validation_steps=nb_val_samples // batch_size,\n",
     "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
     "                                   CSVLogger('vgg16_fine_tune'),\n",
-    "                                   EarlyStopping(patience=5)])"
+    "                                   EarlyStopping(patience=3)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
