delete some unused files

--- a/model_merge.ipynb
+++ b/model_merge.ipynb
@@ -288,134 +288,13 @@
    "source": [
     "test_model(ensemble_model,test_path=test_path,csv='vgg16_and_vgg19_all_submission_0506.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model1 = load_model('simple_cnn_final_model.h5')\n",
-    "# model2= load_model('simple_cnn_final_model.h5')\n",
-    "\n",
-    "# input1 = model1.input\n",
-    "# input2 = model2.input\n",
-    "\n",
-    "# # layer1 = model1.get_layer(index=-2)\n",
-    "# # layer2 = model2.get_layer(index=-2)\n",
-    "\n",
-    "# # avrg_layer = average([layer1,layer2])\n",
-    "# # out = Dense(10, activation='softmax')(avrg_layer)\n",
-    "# output1 = model1.output\n",
-    "# output2 = model2.output\n",
-    "\n",
-    "# out = Average()([output1,output2])\n",
-    "\n",
-    "# model = Model(inputs=[input1,input2],outputs=out)\n",
-    "# model1.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_features(model):\n",
-    "#     image_datagen = image.ImageDataGenerator(preprocessing_function=preprocess_input)\n",
-    "\n",
-    "#     train_generator = image_datagen.flow_from_directory(\n",
-    "#                                         train_path,\n",
-    "#                                         target_size=image_size,\n",
-    "#                                         batch_size=batch_size,\n",
-    "#                                         class_mode='categorical',\n",
-    "#                                         shuffle=False)\n",
-    "\n",
-    "#     validation_generator = image_datagen.flow_from_directory(\n",
-    "#                                         validation_path,\n",
-    "#                                         target_size=image_size,\n",
-    "#                                         batch_size=batch_size,                                    \n",
-    "#                                         class_mode='categorical',\n",
-    "#                                         shuffle=False)\n",
-    "    \n",
-    "#     train_data = model.predict_generator(train_generator,nb_train_samples)\n",
-    "#     train_label = train_generator.classes\n",
-    "    \n",
-    "#     validation_data = model.predict_generator(validation_generator,nb_val_samples)\n",
-    "#     validation_label = validation_generator.classes\n",
-    "    \n",
-    "#     return train_data,train_label,validation_data,validation_label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vgg16_model = load_model('vgg16_final_model.h5')\n",
-    "# vgg16_model.name = 'vgg16_model'\n",
-    "\n",
-    "# vgg19_model = load_model('vgg19_final_model.h5')\n",
-    "# vgg19_model.name = 'vgg19_model'\n",
-    "\n",
-    "# train_data = []\n",
-    "# train_label = []\n",
-    "# validation_data = []\n",
-    "# validation_label = []\n",
-    "\n",
-    "# for model in [vgg16_model,vgg19_model]:\n",
-    "#     td,tl,vd,vl = get_features(model)\n",
-    "#     train_data.append(td)\n",
-    "#     train_label.append(tl)\n",
-    "#     validation_data.append(vd)\n",
-    "#     validation_label.append(vl)\n",
-    "    \n",
-    "# train_data = np.concatenate(train_data, axis=1)\n",
-    "# train_label = np.concatenate(train_label, axis=1)\n",
-    "# validation_data = np.concatenate(validation_data, axis=1)\n",
-    "# validation_label = np.concatenate(validation_label, axis=1)\n",
-    "\n",
-    "# (train_data,train_label) = shuffle(train_data,train_label)\n",
-    "\n",
-    "# model_input = Input(shape=train_data.shape[1:])\n",
-    "# x = Dropout(0.5)(model_input)\n",
-    "# x = Dense(10, activation='softmax')(x)\n",
-    "# merge_model = Model(inputs=model_input,outputs=x)\n",
-    "\n",
-    "# model.compile(optimizer='adam',\n",
-    "#               loss='categorical_crossentropy',\n",
-    "#               metrics=['accuracy'])\n",
-    "# model.fit(train_data,train_label,batch_size=batch_size,epochs=10,\n",
-    "#           validation_data=(validation_data,validation_label),\n",
-    "#           shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(train_data.shape)\n",
-    "# print(validation_data.size())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_model(ensenble_model,test_path=test_path,csv='vgg16_and_vgg19_submission.csv')"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_p36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow_p36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
