--- a/train_validation_split.ipynb
+++ b/train_validation_split.ipynb
@@ -33,9 +33,6 @@
     "\n",
     "\n",
     "df = pd.read_csv('driver_imgs_list.csv')\n",
-    "# subject = df['subject']\n",
-    "# classname = df['classname']\n",
-    "# img = df['img']\n",
     "\n",
     "index = df.index\n",
     "values = df.values\n",
@@ -52,7 +49,7 @@
     "    if new_id != driver_id:\n",
     "        cnt += 1\n",
     "        driver_id = new_id\n",
-    "    if cnt > 3:               #math.floor(num_of_driver * 0.2) :\n",
+    "    if cnt > 3:               \n",
     "        break\n",
     "        \n",
     "    src_path += values[i][1] + '/'\n",
@@ -92,7 +89,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
